--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,36 @@
 # Core ML and Data Science
-pandas==2.1.4
-numpy==1.26.2
-scikit-learn==1.3.2
+pandas==2.2.3
+numpy==1.26.4
+scikit-learn==1.4.2
 
 # NLP and Embeddings
-sentence-transformers==2.2.2
-transformers==4.36.0
-torch==2.1.0
+sentence-transformers==3.0.1
+transformers==4.44.0
+torch==2.6.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
 
 # Vector Databases
-faiss-cpu==1.7.4
-chromadb==0.4.22
+faiss-cpu==1.8.0
+chromadb==0.5.3
 
-# Deep Learning
-tensorflow==2.15.0
-keras==2.15.0
+# Deep Learning (Python 3.13 has very limited TF support — consider removing if unused)
+tensorflow-cpu==2.17.0
+keras==3.4.1
 
 # RAG and LLM
-langchain==0.1.0
-langchain-community==0.0.13
-openai==1.6.1
+langchain==0.2.16
+langchain-community==0.2.16
+openai==1.40.0
 
 # UI
-streamlit==1.29.0
-plotly==5.18.0
-matplotlib==3.8.2
-seaborn==0.13.0
+streamlit==1.37.0
+plotly==5.23.0
+matplotlib==3.9.1
+seaborn==0.13.2
 
 # Data Processing
-openpyxl==3.1.2
+openpyxl==3.1.5
 xlrd==2.0.1
 
 # Utilities
-python-dotenv==1.0.0
-tqdm==4.66.1
+python-dotenv==1.0.1
+tqdm==4.66.5
