--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ transformers==4.44.0
 torch==2.6.0
 
 # Vector Databases
-faiss-cpu==1.8.0
+faiss-cpu==1.9.0.post1
 chromadb==0.5.3
 
 # Deep Learning
